# Bitpunch-DP

./: .gitignore  CMakeLists.txt  Makefile  tuckova_bitpunch_gjs.pbs
src/: main.c
src/bitpunch/: tools.c
src/bitpunch/code/: codectx.c  codectx.h
src/bitpunch/code/qcmdpc/: qcmdpc.c  qcmdpc.h
src/bitpunch/crypto/: mecs.c
src/bitpunch/crypto/mecsbasic/: mecsbasic.c
src/bitpunch/math/: gf2.c  gf2.h  int.c  int.h  uni.h
src/bitpunch/prng/: prng.c  prng.h
